--- a/1/labwork1.ipynb
+++ b/1/labwork1.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Флаг IMREAD_COLOR"
+    "### IMREAD_COLOR"
    ]
   },
   {
