--- a/3/labwork3.ipynb
+++ b/3/labwork3.ipynb
@@ -16,12 +16,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy"
+    "import numpy\n",
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Створення допоміжних функцій"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_image(image: numpy.ndarray, title: str = \"\") -> None:\n",
+    "    cv2.imshow(title, image)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "def preprocess_image(image: numpy.ndarray, kernel_size: int, is_debug: bool = False) -> numpy.ndarray:\n",
+    "    grayscale_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    blurred_image = cv2.GaussianBlur(grayscale_image, (kernel_size, kernel_size), 0)\n",
+    "\n",
+    "    if is_debug:\n",
+    "        show_image(grayscale_image, \"Processed grayscale image\")\n",
+    "        show_image(blurred_image, \"Processed blurred grayscale image\")\n",
+    "\n",
+    "    return blurred_image\n",
+    "\n",
+    "def get_masked_edges(image: numpy.ndarray, roi_vertices: numpy.ndarray, is_debug: bool = False) -> numpy.ndarray:\n",
+    "    ROI_COLOR_POLYGON = (255, 255, 255)\n",
+    "\n",
+    "    THRESHOLD_LOW = 75\n",
+    "    THRESHOLD_HIGH = 200\n",
+    "\n",
+    "    detected_edges = cv2.Canny(image, THRESHOLD_LOW, THRESHOLD_HIGH)\n",
+    "\n",
+    "    mask = numpy.zeros_like(detected_edges)\n",
+    "\n",
+    "    cv2.fillPoly(mask, [roi_vertices], ROI_COLOR_POLYGON)\n",
+    "\n",
+    "    masked_image = cv2.bitwise_and(detected_edges, mask)\n",
+    "\n",
+    "    if is_debug:\n",
+    "        ROI_OUTLINE_THICKNESS = 2\n",
+    "        ROI_COLOR_OUTLINE = (0, 255, 0)\n",
+    "\n",
+    "        debug_image = numpy.zeros_like(image)\n",
+    "\n",
+    "        show_image(detected_edges, \"Detected edges\")\n",
+    "\n",
+    "        cv2.fillPoly(debug_image, [roi_vertices], ROI_COLOR_POLYGON)\n",
+    "\n",
+    "        show_image(debug_image, \"ROI\")\n",
+    "\n",
+    "        cv2.polylines(debug_image, [roi_vertices.reshape((-1, 1, 2))], isClosed = True, color = ROI_COLOR_OUTLINE, thickness = ROI_OUTLINE_THICKNESS)\n",
+    "\n",
+    "        debug_image = cv2.bitwise_and(image, debug_image)\n",
+    "\n",
+    "        show_image(debug_image, \"ROI\")\n",
+    "\n",
+    "    return masked_image\n",
+    "\n",
+    "def get_markup_lines(masked_edges: numpy.ndarray, rho: float, threshold: int, min_length: float, max_gap: float) -> numpy.ndarray:\n",
+    "    THETA = numpy.pi / 180\n",
+    "\n",
+    "    lines = cv2.HoughLinesP(masked_edges, rho, THETA, threshold, numpy.array([]), min_length, max_gap)\n",
+    "\n",
+    "    return lines\n",
+    "\n",
+    "def draw_markup_lines(image: numpy.ndarray, lines: list, color: List[int] = [0, 255, 0], thickness: int = 3):\n",
+    "    \n",
+    "    if lines is None or len(lines) == 0:\n",
+    "        return\n",
+    "    \n",
+    "    x_bottom_pos = []\n",
+    "    x_upper_pos = []\n",
+    "    x_bottom_neg = []\n",
+    "    x_upper_neg = []\n",
+    "\n",
+    "    y_bottom = image.shape[0]\n",
+    "    y_upper = image.shape[0] - image.shape[0] // 2.1\n",
+    "\n",
+    "    for line in lines:\n",
+    "        for x1, y1, x2, y2 in line:\n",
+    "            if (x2 - x1) != 0:\n",
+    "                if ((y2 - y1) / (x2 - x1)) > 0.1 and ((y2 - y1) / (x2 - x1)) < 1.0:\n",
+    "                    slope = ((y2 - y1) / (x2 - x1))\n",
+    "                    b1 = y1 - slope * x1\n",
+    "\n",
+    "                    x_bottom_pos.append((y_bottom - b1) / slope)\n",
+    "                    x_upper_pos.append((y_upper - b1) / slope)\n",
+    "\n",
+    "                elif ((y2 - y1) / (x2 - x1)) < -0.1 and ((y2 - y1) / (x2 - x1)) > -1.0:\n",
+    "                    slope = ((y2 - y1) / (x2 - x1))\n",
+    "                    b1 = y1 - slope * x1\n",
+    "\n",
+    "                    x_bottom_neg.append((y_bottom - b1) / slope)\n",
+    "                    x_upper_neg.append((y_upper - b1) / slope)\n",
+    "\n",
+    "    lines_mean = numpy.array([\n",
+    "      [numpy.mean(x_bottom_pos), numpy.mean(y_bottom), numpy.mean(x_upper_pos), numpy.mean(y_upper)],\n",
+    "      [numpy.mean(x_bottom_neg), numpy.mean(y_bottom), numpy.mean(x_upper_neg), numpy.mean(y_upper)]\n",
+    "    ])\n",
+    "\n",
+    "    for i in range(len(lines_mean)):\n",
+    "        if not numpy.isnan(lines_mean[i, 0]) and not numpy.isnan(lines_mean[i, 1]) and not numpy.isnan(lines_mean[i, 2]) and not numpy.isnan(lines_mean[i, 3]):\n",
+    "            cv2.line(image, (int(lines_mean[i, 0]), int(lines_mean[i, 1])), (int(lines_mean[i, 2]), int(lines_mean[i, 3])), color, thickness)\n",
+    "\n",
+    "def show_markup(image: numpy.ndarray, roi_vertices: numpy.ndarray, rho: float, threshold: int, min_length: float, max_gap: float, color: List[int] = [0, 255, 0], thickness: int = 5, is_debug: bool = False) -> None:\n",
+    "    \n",
+    "    if is_debug:\n",
+    "        show_image(image, \"Unprocessed stock image\")\n",
+    "    \n",
+    "    preprocessed_image = preprocess_image(image, 5, is_debug)\n",
+    "    detected_edges = get_masked_edges(preprocessed_image, roi_vertices, is_debug)\n",
+    "    markup_lines = get_markup_lines(detected_edges, rho, threshold, min_length, max_gap)\n",
+    "    draw_markup_lines(image, markup_lines, color, thickness)"
    ]
   },
   {
@@ -30,175 +150,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cv2.imread(\"Data/road.jpg\")\n",
+    "stock_image = cv2.imread(\"Data/image.jpg\")\n",
     "\n",
-    "cv2.imshow(\"Input image\", image)\n",
+    "RHO = 1\n",
+    "THRESHOLD = 15\n",
+    "MAX_LINES_GAP = 1\n",
+    "MIN_LINES_LENGTH = 1\n",
     "\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
+    "HEIGHT, WIDTH = stock_image.shape[:2]\n",
+    "\n",
+    "HALF_WIDTH = WIDTH // 2\n",
+    "HALF_HEIGHT = HEIGHT // 2\n",
+    "QUARTER_WIDTH = WIDTH // 4\n",
+    "QUARTER_HEIGHT = HEIGHT // 4\n",
+    "\n",
+    "roi_vertices = numpy.array([\n",
+    "    (0, HEIGHT),\n",
+    "    (0, HEIGHT - QUARTER_HEIGHT),\n",
+    "    (HALF_WIDTH, HALF_HEIGHT),\n",
+    "    (WIDTH, HEIGHT - QUARTER_HEIGHT),\n",
+    "    (WIDTH, HEIGHT)\n",
+    "], dtype = numpy.int32)\n",
+    "\n",
+    "show_markup(stock_image, roi_vertices, RHO, THRESHOLD, MIN_LINES_LENGTH, MAX_LINES_GAP, is_debug = True)\n",
+    "\n",
+    "show_image(stock_image, \"Results\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grayscale = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "ESCAPE_KEY = 27\n",
     "\n",
-    "cv2.imshow(\"Grayscale input image\", grayscale)\n",
+    "RHO = 1\n",
+    "THRESHOLD = 15\n",
+    "MAX_LINES_GAP = 1\n",
+    "MIN_LINES_LENGTH = 25\n",
     "\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "KERNEL_SIZE = 5\n",
+    "video_capture = cv2.VideoCapture(\"Data/video.mp4\")\n",
     "\n",
-    "blur = cv2.GaussianBlur(grayscale, (KERNEL_SIZE, KERNEL_SIZE), 0)\n",
+    "_, frame = video_capture.read()\n",
     "\n",
-    "cv2.imshow(\"Blurred input image\", blur)\n",
+    "HEIGHT, WIDTH = frame.shape[:2]\n",
     "\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "low_t = 50\n",
-    "high_t = 150\n",
-    "edges = cv2.Canny(blur, low_t, high_t)\n",
+    "HALF_WIDTH = WIDTH // 2\n",
+    "HALF_HEIGHT = HEIGHT // 2\n",
     "\n",
-    "cv2.imshow(\"Input image\", edges)\n",
-    "\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vertices = numpy.array([[(0, image.shape[0]), (450, 310), (490, 310), (image.shape[1], image.shape[0])]], dtype = numpy.int32)\n",
-    "\n",
-    "mask = numpy.zeros_like(edges)\n",
-    "ignore_mask_color = 255\n",
-    "cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
-    "masked_edges = cv2.bitwise_and(edges, mask)\n",
-    "\n",
-    "cv2.imshow(\"Input image\", masked_edges)\n",
-    "\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def draw_Lines(img, lines, color = [255, 0, 0], thickness = 7):\n",
-    "\n",
-    "    x_bottom_pos = []\n",
-    "    x_upper_pos = []\n",
-    "    x_bottom_neg = []\n",
-    "    x_upper_neg = []\n",
-    "\n",
-    "    y_bottom = 540\n",
-    "    y_upper = 315\n",
-    "\n",
-    "    for line in lines:\n",
-    "        for x1, y1, x2, y2 in line:\n",
-    "        # test and filter values to slope\n",
-    "            if ((y2 - y1) / (x2 - x1)) > 0.5 and ((y2 - y1) / (x2 - x1)) < 0.8:\n",
-    "            \n",
-    "                slope = ((y2 - y1) / (x2 - x1))\n",
-    "                b1 = y1 - slope * x1\n",
-    "\n",
-    "                x_bottom_pos.append((y_bottom - b1) / slope)\n",
-    "                x_upper_pos.append((y_upper - b1) / slope)\n",
-    "\n",
-    "            elif ((y2 - y1) / (x2 - x1)) < -0.5 and ((y2 - y1) / (x2 - x1)) > -0.8:\n",
-    "\n",
-    "                slope = ((y2 - y1) / (x2 - x1))\n",
-    "                b1 = y1 - slope * x1\n",
-    "\n",
-    "                x_bottom_neg.append((y_bottom - b1) / slope)\n",
-    "                x_upper_neg.append((y_upper - b1) / slope)\n",
-    "\n",
-    "    # a new 2d array with means\n",
-    "    lines_mean = numpy.array([\n",
-    "      [int(numpy.mean(x_bottom_pos)), int(numpy.mean(y_bottom)), int(numpy.mean(x_upper_pos)), int(numpy.mean(y_upper))],\n",
-    "      [int(numpy.mean(x_bottom_neg)), int(numpy.mean(y_bottom)), int(numpy.mean(x_upper_neg)), int(numpy.mean(y_upper))] ])\n",
-    "\n",
-    "    # Draw the lines\n",
-    "    for i in range(len(lines_mean)):\n",
-    "        cv2.line(img, (lines_mean[i, 0], lines_mean[i, 1]), (lines_mean[i, 2], lines_mean[i, 3]), color, thickness)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rho = 3\n",
-    "theta = numpy.pi / 180\n",
-    "\n",
-    "threshold = 15\n",
-    "min_line_length = 150\n",
-    "max_line_gap = 60\n",
-    "\n",
-    "lines = cv2.HoughLinesP(masked_edges, rho, theta, threshold, numpy.array([]), minLineLength = min_line_length, maxLineGap = max_line_gap)\n",
-    "\n",
-    "draw_Lines(image, lines)\n",
-    "\n",
-    "cv2.imshow(\"Input image\", image)\n",
-    "\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'process_image' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m ret, frame \u001b[38;5;241m=\u001b[39m video_capture\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ret:\n\u001b[1;32m----> 7\u001b[0m     \u001b[43mprocess_image\u001b[49m(frame)\n\u001b[0;32m      8\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mframe\u001b[39m\u001b[38;5;124m\"\u001b[39m, frame)\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m cv2\u001b[38;5;241m.\u001b[39mwaitKey(\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m0xFF\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mord\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'process_image' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "video_capture = cv2.VideoCapture(\"Data/road.mp4\")\n",
+    "roi_vertices = numpy.array([\n",
+    "    (0, HEIGHT),\n",
+    "    (0, HALF_HEIGHT),\n",
+    "    (WIDTH, HALF_HEIGHT),\n",
+    "    (WIDTH, HEIGHT)\n",
+    "], dtype = numpy.int32)\n",
     "\n",
     "while video_capture.isOpened():\n",
     "    ret, frame = video_capture.read()\n",
     "\n",
     "    if ret:\n",
-    "        process_image(frame)\n",
-    "        cv2.imshow(\"frame\", frame)\n",
+    "        show_markup(frame, roi_vertices, RHO, THRESHOLD, MIN_LINES_LENGTH, MAX_LINES_GAP, is_debug = False)\n",
+    "        cv2.imshow(\"Playback\", frame)\n",
     "\n",
-    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        if cv2.waitKey(33) & 0xFF == ESCAPE_KEY:\n",
     "            break\n",
     "    else:\n",
     "        break\n",
