--- a/3/labwork3.ipynb
+++ b/3/labwork3.ipynb
@@ -138,7 +138,7 @@
     "    if is_debug:\n",
     "        show_image(image, \"Unprocessed stock image\")\n",
     "    \n",
-    "    preprocessed_image = preprocess_image(image, 5, is_debug)\n",
+    "    preprocessed_image = preprocess_image(image, 10, is_debug)\n",
     "    detected_edges = get_masked_edges(preprocessed_image, roi_vertices, is_debug)\n",
     "    markup_lines = get_markup_lines(detected_edges, rho, threshold, min_length, max_gap)\n",
     "    draw_markup_lines(image, markup_lines, color, thickness)"
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,16 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "ESCAPE_KEY = 27\n",
     "\n",
     "RHO = 1\n",
-    "THRESHOLD = 15\n",
-    "MAX_LINES_GAP = 1\n",
-    "MIN_LINES_LENGTH = 25\n",
+    "THRESHOLD = 10\n",
+    "MAX_LINES_GAP = 5\n",
+    "MIN_LINES_LENGTH = 10\n",
     "\n",
     "video_capture = cv2.VideoCapture(\"Data/video.mp4\")\n",
     "\n",
@@ -198,11 +198,12 @@
     "\n",
     "HALF_WIDTH = WIDTH // 2\n",
     "HALF_HEIGHT = HEIGHT // 2\n",
+    "QUATER_WIDTH = WIDTH // 4\n",
     "\n",
     "roi_vertices = numpy.array([\n",
     "    (0, HEIGHT),\n",
-    "    (0, HALF_HEIGHT),\n",
-    "    (WIDTH, HALF_HEIGHT),\n",
+    "    (QUATER_WIDTH, HALF_HEIGHT),\n",
+    "    (QUATER_WIDTH * 3, HALF_HEIGHT),\n",
     "    (WIDTH, HEIGHT)\n",
     "], dtype = numpy.int32)\n",
     "\n",
