--- a/2/labwork2.ipynb
+++ b/2/labwork2.ipynb
@@ -16,12 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy"
+    "import numpy as np"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
     "    for (x, y, width, height) in smiles:\n",
     "       cv2.rectangle(roi_color, (x, y), (x + width, y + height), (0, 0, 255), 2)\n",
     "\n",
-    "cv2.imshow(\"Detected face features\", image)\n",
+    "cv2.imshow(\"Detected faces & face features\", image)\n",
     "\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +100,8 @@
     "smile_classifier = cv2.CascadeClassifier(f\"{cv2.data.haarcascades}haarcascade_smile.xml\")\n",
     "face_classifier = cv2.CascadeClassifier(f\"{cv2.data.haarcascades}haarcascade_frontalface_default.xml\")\n",
     "\n",
-    "cv2.startWindowThread()\n",
-    "\n",
     "capture = cv2.VideoCapture(\"Data/2.mp4\")\n",
+    "fps = int(capture.get(cv2.CAP_PROP_FPS))\n",
     "\n",
     "while True:\n",
     "    _, frame = capture.read()\n",
@@ -130,9 +129,9 @@
     "        for (x, y, width, height) in smiles:\n",
     "            cv2.rectangle(roi_color, (x, y), (x + width, y + height), (0, 0, 255), 2)\n",
     "\n",
-    "    cv2.imshow(\"Detected individuals\", frame)\n",
+    "    cv2.imshow(\"Detected face features\", frame)\n",
     "\n",
-    "    if cv2.waitKey(1) & 0XFF == ord(_KEY_ESCAPE):\n",
+    "    if cv2.waitKey(fps) & 0XFF == ord(_KEY_ESCAPE):\n",
     "        break\n",
     "\n",
     "capture.release()\n",
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,9 +160,8 @@
     "smile_classifier = cv2.CascadeClassifier(f\"{cv2.data.haarcascades}haarcascade_smile.xml\")\n",
     "face_classifier = cv2.CascadeClassifier(f\"{cv2.data.haarcascades}haarcascade_frontalface_default.xml\")\n",
     "\n",
-    "cv2.startWindowThread()\n",
-    "\n",
     "capture = cv2.VideoCapture(\"Data/3.mp4\")\n",
+    "fps = int(capture.get(cv2.CAP_PROP_FPS))\n",
     "\n",
     "while True:\n",
     "    _, frame = capture.read()\n",
@@ -174,7 +172,7 @@
     "    gray_filter = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "    people = hog_descriptor.detectMultiScale(gray_filter, winStride = (8, 8), padding = (16, 16), scale = 1.25)\n",
-    "    people = numpy.array([[human_x, human_y, human_x + human_w, human_y + human_h] for (human_x, human_y, human_w, human_h) in people[0]])\n",
+    "    people = np.array([[human_x, human_y, human_x + human_w, human_y + human_h] for (human_x, human_y, human_w, human_h) in people[0]])\n",
     "\n",
     "    for (x, y, width, height) in people:\n",
     "        roi_color = frame[y:(y + height), x:(x + width)]\n",
@@ -189,7 +187,7 @@
     "    \n",
     "    cv2.imshow(\"Detected individuals\", frame)\n",
     "\n",
-    "    if cv2.waitKey(1) & 0XFF == ord(_KEY_ESCAPE):\n",
+    "    if cv2.waitKey(fps) & 0XFF == ord(_KEY_ESCAPE):\n",
     "        break\n",
     "\n",
     "capture.release()\n",
@@ -213,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
