--- a/3/labwork3.ipynb
+++ b/3/labwork3.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "from typing import List"
    ]
   },
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_image(image: numpy.ndarray, title: str = \"\") -> None:\n",
+    "def show_image(image: np.ndarray, title: str = \"\") -> None:\n",
     "    cv2.imshow(title, image)\n",
     "    cv2.waitKey(0)\n",
     "    cv2.destroyAllWindows()\n",
     "\n",
-    "def preprocess_image(image: numpy.ndarray, kernel_size: int, is_debug: bool = False) -> numpy.ndarray:\n",
+    "def preprocess_image(image: np.ndarray, kernel_size: int, is_debug: bool = False) -> np.ndarray:\n",
     "    grayscale_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "    blurred_image = cv2.GaussianBlur(grayscale_image, (kernel_size, kernel_size), 0)\n",
     "\n",
@@ -74,25 +74,20 @@
     "\n",
     "    return blurred_image\n",
     "\n",
-    "def get_masked_edges(image: numpy.ndarray, roi_vertices: numpy.ndarray, is_debug: bool = False) -> numpy.ndarray:\n",
+    "def get_masked_edges(image: np.ndarray, roi_vertices: np.ndarray, is_debug: bool = False) -> np.ndarray:\n",
     "    ROI_COLOR_POLYGON = (255, 255, 255)\n",
-    "\n",
     "    THRESHOLD_LOW = 75\n",
     "    THRESHOLD_HIGH = 200\n",
     "\n",
     "    detected_edges = cv2.Canny(image, THRESHOLD_LOW, THRESHOLD_HIGH)\n",
-    "\n",
-    "    mask = numpy.zeros_like(detected_edges)\n",
-    "\n",
+    "    mask = np.zeros_like(detected_edges)\n",
     "    cv2.fillPoly(mask, [roi_vertices], ROI_COLOR_POLYGON)\n",
-    "\n",
     "    masked_image = cv2.bitwise_and(detected_edges, mask)\n",
     "\n",
     "    if is_debug:\n",
     "        ROI_OUTLINE_THICKNESS = 2\n",
     "        ROI_COLOR_OUTLINE = (0, 255, 0)\n",
-    "\n",
-    "        debug_image = numpy.zeros_like(image)\n",
+    "        debug_image = np.zeros_like(image)\n",
     "\n",
     "        show_image(detected_edges, \"Detected edges\")\n",
     "\n",
@@ -108,15 +103,12 @@
     "\n",
     "    return masked_image\n",
     "\n",
-    "def get_markup_lines(masked_edges: numpy.ndarray, rho: float, threshold: int, min_length: float, max_gap: float) -> numpy.ndarray:\n",
-    "    THETA = numpy.pi / 180\n",
-    "\n",
-    "    lines = cv2.HoughLinesP(masked_edges, rho, THETA, threshold, numpy.array([]), min_length, max_gap)\n",
-    "\n",
+    "def get_markup_lines(masked_edges: np.ndarray, rho: float, threshold: int, min_length: float, max_gap: float) -> np.ndarray:\n",
+    "    THETA = np.pi / 180\n",
+    "    lines = cv2.HoughLinesP(masked_edges, rho, THETA, threshold, np.array([]), min_length, max_gap)\n",
     "    return lines\n",
     "\n",
-    "def draw_markup_lines(image: numpy.ndarray, lines: list, color: List[int] = [0, 255, 0], thickness: int = 3):\n",
-    "    \n",
+    "def draw_markup_lines(image: np.ndarray, lines: list, color: List[int] = [0, 255, 0], thickness: int = 3):\n",
     "    if lines is None or len(lines) == 0:\n",
     "        return\n",
     "    \n",
@@ -134,32 +126,29 @@
     "                if ((y2 - y1) / (x2 - x1)) > 0.1 and ((y2 - y1) / (x2 - x1)) < 1.0:\n",
     "                    slope = ((y2 - y1) / (x2 - x1))\n",
     "                    b1 = y1 - slope * x1\n",
-    "\n",
     "                    x_bottom_pos.append((y_bottom - b1) / slope)\n",
     "                    x_upper_pos.append((y_upper - b1) / slope)\n",
     "\n",
     "                elif ((y2 - y1) / (x2 - x1)) < -0.1 and ((y2 - y1) / (x2 - x1)) > -1.0:\n",
     "                    slope = ((y2 - y1) / (x2 - x1))\n",
     "                    b1 = y1 - slope * x1\n",
-    "\n",
     "                    x_bottom_neg.append((y_bottom - b1) / slope)\n",
     "                    x_upper_neg.append((y_upper - b1) / slope)\n",
     "\n",
-    "    lines_mean = numpy.array([\n",
-    "      [numpy.mean(x_bottom_pos), numpy.mean(y_bottom), numpy.mean(x_upper_pos), numpy.mean(y_upper)],\n",
-    "      [numpy.mean(x_bottom_neg), numpy.mean(y_bottom), numpy.mean(x_upper_neg), numpy.mean(y_upper)]\n",
+    "    lines_mean = np.array([\n",
+    "      [np.mean(x_bottom_pos), np.mean(y_bottom), np.mean(x_upper_pos), np.mean(y_upper)],\n",
+    "      [np.mean(x_bottom_neg), np.mean(y_bottom), np.mean(x_upper_neg), np.mean(y_upper)]\n",
     "    ])\n",
     "\n",
     "    for i in range(len(lines_mean)):\n",
-    "        if not numpy.isnan(lines_mean[i, 0]) and not numpy.isnan(lines_mean[i, 1]) and not numpy.isnan(lines_mean[i, 2]) and not numpy.isnan(lines_mean[i, 3]):\n",
+    "        if not np.isnan(lines_mean[i, 0]) and not np.isnan(lines_mean[i, 1]) and not np.isnan(lines_mean[i, 2]) and not np.isnan(lines_mean[i, 3]):\n",
     "            cv2.line(image, (int(lines_mean[i, 0]), int(lines_mean[i, 1])), (int(lines_mean[i, 2]), int(lines_mean[i, 3])), color, thickness)\n",
     "\n",
-    "def show_markup(image: numpy.ndarray, roi_vertices: numpy.ndarray, rho: float, threshold: int, min_length: float, max_gap: float, color: List[int] = [0, 255, 0], thickness: int = 5, is_debug: bool = False) -> None:\n",
-    "    \n",
+    "def show_markup(image: np.ndarray, roi_vertices: np.ndarray, rho: float, threshold: int, min_length: float, max_gap: float, color: List[int] = [0, 255, 0], thickness: int = 5, is_debug: bool = False) -> None:\n",
     "    if is_debug:\n",
     "        show_image(image, \"Unprocessed stock image\")\n",
     "    \n",
-    "    preprocessed_image = preprocess_image(image, 10, is_debug)\n",
+    "    preprocessed_image = preprocess_image(image, 5, is_debug)\n",
     "    detected_edges = get_masked_edges(preprocessed_image, roi_vertices, is_debug)\n",
     "    markup_lines = get_markup_lines(detected_edges, rho, threshold, min_length, max_gap)\n",
     "    draw_markup_lines(image, markup_lines, color, thickness)"
@@ -188,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,16 +195,15 @@
     "QUARTER_WIDTH = WIDTH // 4\n",
     "QUARTER_HEIGHT = HEIGHT // 4\n",
     "\n",
-    "roi_vertices = numpy.array([\n",
+    "roi_vertices = np.array([\n",
     "    (0, HEIGHT),\n",
     "    (0, HEIGHT - QUARTER_HEIGHT),\n",
     "    (HALF_WIDTH, HALF_HEIGHT),\n",
     "    (WIDTH, HEIGHT - QUARTER_HEIGHT),\n",
     "    (WIDTH, HEIGHT)\n",
-    "], dtype = numpy.int32)\n",
+    "], dtype = np.int32)\n",
     "\n",
     "show_markup(stock_image, roi_vertices, RHO, THRESHOLD, MIN_LINES_LENGTH, MAX_LINES_GAP, is_debug = True)\n",
-    "\n",
     "show_image(stock_image, \"Results\")"
    ]
   },
@@ -228,20 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "ESCAPE_KEY = 27\n",
     "\n",
     "RHO = 1\n",
-    "THRESHOLD = 10\n",
+    "THRESHOLD = 7\n",
     "MAX_LINES_GAP = 5\n",
     "MIN_LINES_LENGTH = 10\n",
     "\n",
-    "video_capture = cv2.VideoCapture(\"Data/video.mp4\")\n",
+    "capture = cv2.VideoCapture(\"Data/video.mp4\")\n",
+    "fps = int(capture.get(cv2.CAP_PROP_FPS))\n",
     "\n",
-    "_, frame = video_capture.read()\n",
+    "_, frame = capture.read()\n",
     "\n",
     "HEIGHT, WIDTH = frame.shape[:2]\n",
     "\n",
@@ -249,26 +238,26 @@
     "HALF_HEIGHT = HEIGHT // 2\n",
     "QUATER_WIDTH = WIDTH // 4\n",
     "\n",
-    "roi_vertices = numpy.array([\n",
+    "roi_vertices = np.array([\n",
     "    (0, HEIGHT),\n",
     "    (QUATER_WIDTH, HALF_HEIGHT),\n",
     "    (QUATER_WIDTH * 3, HALF_HEIGHT),\n",
     "    (WIDTH, HEIGHT)\n",
-    "], dtype = numpy.int32)\n",
+    "], dtype = np.int32)\n",
     "\n",
-    "while video_capture.isOpened():\n",
-    "    ret, frame = video_capture.read()\n",
+    "while capture.isOpened():\n",
+    "    ret, frame = capture.read()\n",
     "\n",
     "    if ret:\n",
     "        show_markup(frame, roi_vertices, RHO, THRESHOLD, MIN_LINES_LENGTH, MAX_LINES_GAP, is_debug = False)\n",
     "        cv2.imshow(\"Playback\", frame)\n",
     "\n",
-    "        if cv2.waitKey(33) & 0xFF == ESCAPE_KEY:\n",
+    "        if cv2.waitKey(fps) & 0xFF == ESCAPE_KEY:\n",
     "            break\n",
     "    else:\n",
     "        break\n",
     "\n",
-    "video_capture.release()\n",
+    "capture.release()\n",
     "cv2.destroyAllWindows()"
    ]
   }
@@ -289,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
